{
    "name": "NewInputSystem",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7f40935b-0826-436e-ab69-92f5288126dc",
            "actions": [
                {
                    "name": "LeftClicking",
                    "type": "Button",
                    "id": "b28b4e73-a653-44c3-b020-00612e448a4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d2b44696-3ab8-4a75-97f7-041d8b39a0d6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClicking",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "0511178a-4c6c-4d8e-a89a-b8814cba8062",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9181f361-8e75-42c4-9d2e-c1fe4a77a790",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a1a5497f-86be-4bd8-8d4b-7a6a86bfe2b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "9ca8ebe4-f876-44be-b91b-c586a9a180bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Button",
                    "id": "0b378c12-f934-49b1-b864-05a38079689f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2e6f9f38-f9d3-4998-8ac4-16a42a79cee8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "96b14a4e-b5fb-4996-881e-23bfcc876c99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "faffe06c-b6a2-4ec2-9d84-073400e097b9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ef6ad22d-8adc-4b44-8bcb-c12044aeb104",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "35e9564c-af62-450b-a655-cce07ead2a12",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5b8443c2-4b91-48df-b126-db246b53685c",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12009ac7-8ba8-4896-b59d-d77b738e0cdd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "095b5d5d-639e-4067-83e6-40b9e7378b8d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}